Bug 816340 - Propagate events to chrome even if there is a disabled form control in the event target chain, r=jst,gavin